feat: profile and buy commands

--- a/src/languages/en-US/common.json
+++ b/src/languages/en-US/common.json
@@ -2,12 +2,21 @@
 	"aliases": "Aliases",
 	"armor": "Armor",
 	"assassin": "Assassin",
+	"awake": "Awake",
 	"baseStats": "Stats",
 	"bigTurn": "Big turn",
+	"buy": "Buy",
 	"cancel": "Cancel",
+	"challenges": "Challenges",
 	"chooseClass": "Choose class",
 	"class": "Class",
 	"descriptions": {
+		"awakeName": "Your character name",
+		"buyItem": "The item you want to buy.",
+		"buyQuantity": "The amount of items you want to buy.",
+		"hunterProfile": "The hunter to show.",
+		"language": "The language you want",
+		"showProfile": "Should the profile be shown to other people?",
 		"term": "The things you need help"
 	},
 	"drink": "Drink",
@@ -15,10 +24,16 @@
 	"examples": "Examples",
 	"fighter": "Fighter",
 	"gloves": "Gloves",
+	"guild": "Guild",
 	"heal": "Heal",
 	"healer": "Healer",
 	"helmet": "Helmet",
 	"help": "Help",
+	"hunter": "Hunter",
+	"information": "Information",
+	"item": "Item",
+	"language": "Language",
+	"level": "Level",
 	"levelDepends": {
 		"amount": "Amount",
 		"cooldown": "Cooldown",
@@ -30,10 +45,16 @@
 	},
 	"links": "Useful links",
 	"mage": "Mage",
+	"missingField": "Missing these fields: {{fields}}",
+	"money": "Money",
+	"name": "Name",
 	"necklace": "Necklace",
 	"no": "No",
+	"none": "none",
+	"notEnough": "Not enough {{what}}!",
 	"party": "Party",
 	"profile": "Profile",
+	"quantity": "Quantity",
 	"ranger": "Ranger",
 	"rank": "Rank",
 	"ring": "Ring",
@@ -41,13 +62,16 @@
 	"selectMenuPlaceholder": "Make a selection",
 	"sellValue": "Sell value",
 	"shoes": "Shoes",
+	"show": "Show",
 	"skills": "Skills",
 	"smallTurn": "Small turn",
 	"species": "Species",
+	"start": "Start",
 	"tanker": "Tanker",
 	"term": "Terms",
 	"timeout": "Time out",
 	"type": "Type",
+	"unspecialized": "Unspecialized",
 	"usage": "Usage",
 	"weapon": "Weapon",
 	"welcome": "Welcome",
