--- a/src/languages/en-US/constant.json
+++ b/src/languages/en-US/constant.json
@@ -4,17 +4,50 @@
 	"donateBot": "https://donatebot.io/checkout/724186681124716544?buyer={{uid}}",
 	"donateBot_markdown": "[Donate Bot](https://donatebot.io/checkout/724186681124716544?buyer={{uid}})",
 	"emojis": {
-		"blacksmith": "<:BlackSmith:724541953890320384>",
-		"gambling": "<:Gambling:724541954066743347>",
-		"gold": "<:Golds:729535888912154754>",
-		"guild": "<:Guild:724541954796421151>",
-		"life potion": "<:Lifepotion1000:740053804463947776>",
-		"lottery ticket": "<:Lotteryticket:763331798423044097>",
-		"mana potion": "<:Manapotion1000:740053804480856074>",
-		"pvp": "<:PvP:724541953978662972>",
-		"quest": "<:Quest:724541953961623572>",
-		"random box": "<:RandomBox:748805857587757077>",
-		"shop": "<:Shop:724541954150498335>"
+		"blacksmith": "<:s:724541953890320384>",
+		"class": {
+			"assassin": "<:s:741716520920678451>",
+			"fighter": "<:s:741716521147170836>",
+			"healer": "<:s:741716521088188476>",
+			"mage": "<:s:741716521109159996>",
+			"ranger": "<:s:741716521083994255>",
+			"tanker": "<:s:741716521365274654>",
+			"unspecialized": "<:s:741716520949776425>"
+		},
+		"currencies": {
+			"gold": "<:s:729535888912154754>",
+			"magicCore": "<:s:729601324013846650>",
+			"manaCrystal": "<:s:729523453706764388>"
+		},
+		"gambling": "<:s:724541954066743347>",
+		"guild": "<:s:724541954796421151>",
+		"life potion": "<:s:740053804463947776>",
+		"lottery ticket": "<:s:763331798423044097>",
+		"mana potion": "<:s:740053804480856074>",
+		"pvp": "<:s:724541953978662972>",
+		"quest": "<:s:724541953961623572>",
+		"random box": "<:s:748805857587757077>",
+		"rank": {
+			"a": "<:s:729856064962691153>",
+			"b": "<:s:729856065143046225>",
+			"c": "<:s:729856065486848030>",
+			"d": "<:s:729856065285521509>",
+			"e": "<:s:729856065168212039>",
+			"national": "<:s:729861742191968339><:s:729861742435500073>",
+			"s": "<:s:729856065088389201>",
+			"ss": "<:s:729861742452146186><:s:729861742380974101>"
+		},
+		"shop": "<:s:724541954150498335>",
+		"stats": {
+			"agi": "<:s:758152007386398750>",
+			"def": "<:s:758151671993598003>",
+			"hp": "<:s:741719020423741510>",
+			"int": "<:s:741719020356501575>",
+			"mp": "<:s:741719020419678258>",
+			"mr": "<:s:741719020549439538>",
+			"str": "<:s:741719020478136365>",
+			"vit": "<:s:758152007126745131>"
+		}
 	},
 	"patreon": "https://www.patreon.com/sololevelingsimulator",
 	"patreon_markdown": "[Patreon](https://www.patreon.com/sololevelingsimulator)",
