--- a/src/languages/vi/common.json
+++ b/src/languages/vi/common.json
@@ -2,12 +2,21 @@
 	"aliases": "Tên khác",
 	"armor": "Áo giáp",
 	"assassin": "Sát thủ",
+	"awake": "Thức tỉnh",
 	"baseStats": "Chỉ số",
 	"bigTurn": "Lượt chính",
+	"buy": "Mua",
 	"cancel": "Hủy",
+	"challenges": "Thử thách",
 	"chooseClass": "Chọn thiên chức",
 	"class": "Thiên chức",
 	"descriptions": {
+		"awakeName": "Tên nhân vật",
+		"buyItem": "Vật phẩm mà bạn muốn mua.",
+		"buyQuantity": "Số lượng vật phẩm bạn muốn mua.",
+		"hunterProfile": "Người bạn muốn xem.",
+		"language": "Ngôn ngữ mà bạn muốn đổi",
+		"showProfile": "Có nên hiển thị hồ sơ cho người khác không?",
 		"term": "Thứ mà bạn cần trợ giúp"
 	},
 	"drink": "Hồi năng lượng",
@@ -15,10 +24,16 @@
 	"examples": "Ví dụ",
 	"fighter": "Đấu sĩ",
 	"gloves": "Găng",
+	"guild": "Bang hội",
 	"heal": "Hồi máu",
 	"healer": "Hồi phục sư",
 	"helmet": "Mũ",
 	"help": "Trợ giúp",
+	"hunter": "Thợ săn",
+	"information": "Thông tin",
+	"item": "Vật phẩm",
+	"language": "Ngôn ngữ",
+	"level": "Cấp",
 	"levelDepends": {
 		"amount": "Số lượng",
 		"cooldown": "Hồi chiêu",
@@ -30,10 +45,16 @@
 	},
 	"links": "Useful links",
 	"mage": "Pháp sư",
+	"missingField": "Thiếu mục: {{fields}}",
+	"money": "Tiền tệ",
+	"name": "Tên",
 	"necklace": "Vòng cổ",
 	"no": "Không",
+	"none": "không",
+	"notEnough": "Không đủ {{what}}!",
 	"party": "Tổ đội",
 	"profile": "Hồ sơ",
+	"quantity": "Số lượng",
 	"ranger": "Xạ thủ",
 	"rank": "Hạng",
 	"ring": "Nhẫn",
@@ -41,13 +62,16 @@
 	"selectMenuPlaceholder": "Lựa chọn",
 	"sellValue": "Giá bán",
 	"shoes": "Giày",
+	"show": "Hiển thị",
 	"skills": "Kĩ năng",
 	"smallTurn": "Lượt phụ",
 	"species": "Chủng loại",
+	"start": "Hướng dẫn",
 	"tanker": "Đỡ đòn",
 	"term": "Thuật ngữ",
 	"timeout": "Hết giờ",
 	"type": "Loại",
+	"unspecialized": "Tán nhân",
 	"usage": "Sử dụng",
 	"weapon": "Vũ khí",
 	"welcome": "Chào mừng",
