feat: drink heal inventory commands

--- a/src/languages/en-US/common.json
+++ b/src/languages/en-US/common.json
@@ -10,12 +10,15 @@
 	"challenges": "Challenges",
 	"chooseClass": "Choose class",
 	"class": "Class",
+	"consumables": "Consumables",
 	"descriptions": {
 		"awakeName": "Your character name",
 		"buyItem": "The item you want to buy.",
 		"buyQuantity": "The amount of items you want to buy.",
+		"hunterInventory": "The hunter to show.",
 		"hunterProfile": "The hunter to show.",
 		"language": "The language you want",
+		"showInventory": "Should the inventory be shown to other people?",
 		"showProfile": "Should the profile be shown to other people?",
 		"term": "The things you need help",
 		"useItem": "The item you wanna use."
@@ -32,7 +35,9 @@
 	"help": "Help",
 	"hunter": "Hunter",
 	"information": "Information",
+	"inventory": "Inventory",
 	"item": "Item",
+	"keys": "Keys",
 	"language": "Language",
 	"level": "Level",
 	"levelDepends": {
@@ -46,6 +51,7 @@
 	},
 	"links": "Useful links",
 	"mage": "Mage",
+	"materials": "Materials",
 	"missingField": "Missing these fields: {{fields}}",
 	"money": "Money",
 	"name": "Name",
@@ -74,6 +80,7 @@
 	"timeout": "Time out",
 	"type": "Type",
 	"unspecialized": "Unspecialized",
+	"usableKeys": "Keys",
 	"usage": "Usage",
 	"use": "Use",
 	"weapon": "Weapon",
