--- a/src/languages/en-US/constant.json
+++ b/src/languages/en-US/constant.json
@@ -22,9 +22,35 @@
 		},
 		"gambling": "<:s:724541954066743347>",
 		"guild": "<:s:724541954796421151>",
+		"keys": {
+			"A-rank key": "<:s:740054291414384770>",
+			"B-rank key": "<:s:740054291984678966>",
+			"C-rank key": "<:s:740054291217252363>",
+			"D-rank key": "<:s:740054291326304408>",
+			"E-rank key": "<:s:740054291158532178>",
+			"S-rank key": "<:s:740054291317784639>",
+			"SS-rank key": "<:s:740423956208812113>",
+			"Uprank key": "<:s:740175804339585024>"
+		},
 		"life potion": "<:s:740053804463947776>",
 		"lottery ticket": "<:s:763331798423044097>",
 		"mana potion": "<:s:740053804480856074>",
+		"materials": {
+			"Briga's Claw": "<:BrigasClaw:749291018763108383>",
+			"Briga's Fur": "<:BrigasFur:749291018423107675>",
+			"Goblin's Cloth": "<:GoblinsCloth:749291059657441290>",
+			"Goblin's Eye": "<:Goblinseye:749291059615629333>",
+			"Raikan's Fang": "<:RaikansSteelFang:749290982037782599>",
+			"Raikan's Fur": "<:RaikansFur:749290981601443942>",
+			"Rasaka's Eye": "<:RasakasEye:749291094969155644>",
+			"Rasaka's Poison Fang": "<:RasakasPoisonFang:752077738008903681>",
+			"Rasaka's Red Scale": "<:RasakasRedScale:749292242497306664>",
+			"Rasaka's Scale": "<:RasakasScale:749291094570827817>",
+			"Razan's Fang": "<:RazansFang:749291136945750147>",
+			"Razan's Fur": "<:RazansFur:749291136975241266>",
+			"Stone Golem's Core": "<:StoneGolem_sCore:751417103831138386>",
+			"Stone Golem's Skin Shard": "<:StoneGolemsSkin:749290950072729661>"
+		},
 		"pvp": "<:s:724541953978662972>",
 		"quest": "<:s:724541953961623572>",
 		"random box": "<:s:748805857587757077>",
