--- a/src/languages/vi/common.json
+++ b/src/languages/vi/common.json
@@ -10,12 +10,15 @@
 	"challenges": "Thử thách",
 	"chooseClass": "Chọn thiên chức",
 	"class": "Thiên chức",
+	"consumables": "Tiêu thụ",
 	"descriptions": {
 		"awakeName": "Tên nhân vật",
 		"buyItem": "Vật phẩm mà bạn muốn mua.",
 		"buyQuantity": "Số lượng vật phẩm bạn muốn mua.",
+		"hunterInventory": "Người bạn muốn xem.",
 		"hunterProfile": "Người bạn muốn xem.",
 		"language": "Ngôn ngữ mà bạn muốn đổi",
+		"showInventory": "Có nên hiển thị kho đồ cho người khác không?",
 		"showProfile": "Có nên hiển thị hồ sơ cho người khác không?",
 		"term": "Thứ mà bạn cần trợ giúp",
 		"useItem": "Vật phẩm mà bạn muốn sử dụng."
@@ -32,7 +35,9 @@
 	"help": "Trợ giúp",
 	"hunter": "Thợ săn",
 	"information": "Thông tin",
+	"inventory": "Kho đồ",
 	"item": "Vật phẩm",
+	"keys": "Khóa",
 	"language": "Ngôn ngữ",
 	"level": "Cấp",
 	"levelDepends": {
@@ -46,6 +51,7 @@
 	},
 	"links": "Useful links",
 	"mage": "Pháp sư",
+	"materials": "Vật liệu",
 	"missingField": "Thiếu mục: {{fields}}",
 	"money": "Tiền tệ",
 	"name": "Tên",
@@ -74,6 +80,7 @@
 	"timeout": "Hết giờ",
 	"type": "Loại",
 	"unspecialized": "Tán nhân",
+	"usableKeys": "Khóa",
 	"usage": "Sử dụng",
 	"use": "Sử dụng",
 	"weapon": "Vũ khí",
